--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   # UI Enhancements
   flutter_svg: ^2.0.10+1
   shimmer: ^3.0.0
+  change_app_package_name: ^1.5.0
 
 dev_dependencies:
   flutter_test:
